# curl-but-worse

./: Cargo.toml  README.md
src/: dispatcher.rs  main.rs  messages.rs  terminal.rs
