[package]
name = "curl-but-worse"
version = "0.1.0"
authors = ["mhs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11" }
futures = { version = "0.3.12" }
eyre = { version = "0.6" }
color-eyre = { version = "0.5" }
cursive = { version = "0.16" }